kubernetes/apps/k8s/monitoring/thanos/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
spec:
  ingressClassName: nginx
  rules:
  - host: "thanos.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: thanos-query-frontend
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "thanos.${DOMAIN}"
